# format-xml

./: .gitignore  LICENSE  Makefile  README.md  js-beautify.json  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-test.txt
.github/workflows/: deploy_to_pypi.yml
src/: format_xml.py
tests/: test_format_drawio_xml.py
