[project]
name = "format-xml"
version = "0.0.0"
authors = [
  { name="Kathryn DiPippo", email="dipippo.k@gmail.com" },
]
description = "XML formatting for use in maintaining XML-as-code repositories."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/kdipippo/format-xml"
Issues = "https://github.com/kdipippo/format-xml/issues"
